tests/snapshots/error_format__conflict_error.snap
---
source: tests/error_format.rs
expression: body
---
{
  "error": {
    "code": "CONFLICT",
    "message": "[message]"
  }
}
