tests/snapshots/error_format__unauthorized_error.snap
---
source: tests/error_format.rs
expression: body
---
{
  "error": {
    "code": "UNAUTHORIZED",
    "message": "[message]"
  }
}
