tests/snapshots/error_format__validation_error.snap
---
source: tests/error_format.rs
expression: body
---
{
  "error": {
    "code": "VALIDATION_ERROR",
    "message": "[message]"
  }
}
